# anti_spam_back

./: Dockerfile  Makefile  backend.yaml  config.py  consumer.py  crud.py  db.py  main.py  pyproject.toml
messages/: __init__.py  crud.py  models.py  producer.py  routers.py
users/: __init__.py  auth.py  crud.py  dependencies.py  models.py  routers.py
