[project]
name = "anti-spam-back"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.115.12",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.24",
]
